--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "server comic",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "start": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,7 +21,6 @@
     "firebase-admin": "^11.10.1",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1",
-    "uuid": "^9.0.0"
+    "nodemon": "^3.0.1"
   }
 }
